Worked on the CSS for the search results section for the search page

--- a/index.html
+++ b/index.html
@@ -173,10 +173,7 @@ li a:hover {
     margin-left: 80px;
 }
 
-#tools{
 
-
-}
 
 .nav-tabs{
     height: 15px;
@@ -195,6 +192,99 @@ li a:hover {
     padding: 28px 16px 12px;
 }
 
+#how-many{
+     color: #666;
+     margin-left: 155px;
+     font-size: 13px;
+}
+
+.results{
+    margin-left: 155px;
+    width: 642px;
+
+
+
+}
+
+.blue-heading a:link{
+    color:#1a0dab;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+.blue-heading a:hover{
+    color:#1a0dab;
+    text-decoration: underline;
+    font-weight: normal;
+
+}
+
+.blue-heading a:active{
+	 color: red
+	 text-decoration: underline;
+	 font-weight: normal;
+
+}
+
+.blue-heading a:visited{
+    color: #609;
+    text-decoration: underline;
+    font-weight: normal;
+}
+
+.green-text{
+	color:#006621;
+	padding: -15px;
+	margin-top: -20px;
+	font-size: 15px;
+}
+
+.add-img{
+	margin: 2px 0 -5px 0;
+}
+
+.results-body{
+	color: #545454;
+	line-height: 18px;
+	font-size: small;
+
+}
+
+.results-body p{
+
+	padding: -15px;
+	margin-top: -15px;
+}
+
+.little-links{
+    padding: -12px;
+	margin-top: -12px;
+
+}
+
+
+.blue-links:link {
+    color:#1a0dab;
+    text-decoration: none;
+}
+
+
+.blue-links:hover {
+	color:#1a0dab;
+    text-decoration: underline;
+}
+
+.blue-links:active{
+	 color: red
+	 text-decoration: underline;
+
+}
+
+.blue-links:visited{
+    color: #609;
+    text-decoration: underline;
+
+}
 
 textarea:focus,{
     outline: none;
@@ -291,7 +381,7 @@ footer a:hover {
 
 <div id="box"> 
   	<form>
-     <input type="text" name="search" title="search" id="search" >
+     <input type="text" name="search" title="search" id="search" placeholder="Build this webpage" >
      <input type="image" src="images/mic.png" alt="Submit" id="mic">
       <input type="image" src="images/magnify-glass.png" alt="Submit" id="magnify-glass">
     </form>
@@ -332,13 +422,90 @@ footer a:hover {
 
   </nav>
 
-  
 </header>
+
 <section>
-  
+  <div id="how-many">
+  	<p>About 1,950,000 results (0.51 seconds)</p>
+  </div>
+
+<div class="results">
+  <div class="blue-heading">
+<a href="www.wix.com/build/a-website"><h3>Build a Website - Make a Free Professional Site - wix.com</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> <img class="add-img" src="images/add.png">www.wix.com/build/a-website <img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>Instantly Make Your <strong>Website </strong> Today</p>
+  	<p>Traffic generation tools - Market leaders - Free multilingual fonts · Easy drag n’ drop · Easy-to-add blog
+Services: App Market, SEO Wizard, Mailboxes, Blog, Online Stores</p>
+
+   <div class="little-links"></div>
+
+<ul>
+	<li><a class="blue-links" href="#"> Customise Easily</a> -</li>
+	<li><a class="blue-links" href="#">Free Website Builder</a> -</li>
+	<li><a class="blue-links" href="#">Professional Website</a> -</li>
+	<li><a class="blue-links" href="#">Online Store Builder</a> -</li>
+	<li><a class="blue-links" href="#">Free Hosting</a></li>
+</ul>
+    
+    </div>
+
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="www.wix.com/build/a-website"><h3>Website Making Tools - Weebly.com (Recommended)‎</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> <img class="add-img" src="images/add.png">www.weebly.com/build-website‎ <img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>Customizable Templates for Unique Sites. Subscribe For a 1 Year Free Domain!</p>
+  	<p>40 Million+ Sites Started · No Coding Required · Personalized Domain · Premium Customer Support
+Types: Modern Websites, Professional Websites, Responsive Websites, Themed Websites, Robust Webs</p>
+
+   <div class="little-links"></div>
+
+<ul>
+	<li><a class="blue-links" href="#"> Website Builder</a> -</li>
+	<li><a class="blue-links" href="#">Website Features</a> -</li>
+	<li><a class="blue-links" href="#">Beautiful Themes</a> -</li>
+	<li><a class="blue-links" href="#">100% Happiness Guarantee</a> </li>
+	
+</ul>
+    
+    </div>
+
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="www.wix.com/build/a-website"><h3>With zero coding experience, artist building 180 webpages in 180 days</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> <img class="add-img" src="images/add.png">https://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages-... <img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages </strong> in 180 days. "Learning by doing" is taken to the extreme by novice programmer. Jon Brodkin - 7/26/2013, 11:00 AM. One of Jennifer Dewalt's creations, this <strong>webpage </strong> lets visitors <strong>create </strong>paintings in the style of Piet Mondriaan. Jennifer Dewalt · reader comments.</p>
+  	
+
+   
+    </div>
+
+</div> 
+
 
 
   </section>
+
+
+
 
   <footer>
   <div id="top-bar">
