Completed all results for the page and made a start on the gooooogle image

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 	<style type="text/css">
 		
 		body{
-  background-color: #fff;
+     background-color: #fff;
 	color: #222;
 	font-family: arial, sans-serif;
 	margin: 0;
 	padding: 0;
+	
+}
 
+h3{
+    font-weight: normal;
 }
 
 div{
@@ -202,8 +206,10 @@ li a:hover {
     margin-left: 155px;
     width: 642px;
 
-
-
+}
+.blue-heading{
+	font-weight: normal;
+	font-size: 18px;
 }
 
 .blue-heading a:link{
@@ -284,6 +290,48 @@ li a:hover {
     color: #609;
     text-decoration: underline;
 
+}
+
+.last-result{
+     margin-left:155px; 
+     width: 642px; 
+
+}
+
+.lower-left{
+    display: inline;
+    width: 300px;
+}
+
+.lower-right{
+
+	display: inline;
+	width: 300px;
+	position:relative;
+	left: 320px;
+	top: -136px;
+}
+
+#goooogle{
+	width: 450px;
+	position: relative;
+	left:150px; 
+	top: -120px;
+
+}
+
+.goolink{
+   margin-right:10px;
+}
+
+#next{
+  margin-left: 25px;
+
+}
+
+.numbers{
+    font-size: small;
+	margin-left: 55px;
 }
 
 textarea:focus,{
@@ -381,7 +429,7 @@ footer a:hover {
 
 <div id="box"> 
   	<form>
-     <input type="text" name="search" title="search" id="search" placeholder="Build this webpage" >
+     <input type="text" name="search" title="search" id="search">
      <input type="image" src="images/mic.png" alt="Submit" id="mic">
       <input type="image" src="images/magnify-glass.png" alt="Submit" id="magnify-glass">
     </form>
@@ -458,7 +506,7 @@ Services: App Market, SEO Wizard, Mailboxes, Blog, Online Stores</p>
 
 <div class="results">
   <div class="blue-heading">
-<a href="www.wix.com/build/a-website"><h3>Website Making Tools - Weebly.com (Recommended)‎</h3> </a>  	
+<a href="www.weebly.com/build-website‎"><h3>Website Making Tools - Weebly.com (Recommended)‎</h3> </a>  	
   </div>
   <div class="green-text">
    <p> <img class="add-img" src="images/add.png">www.weebly.com/build-website‎ <img src="images/mini-arrow.png"> </p>
@@ -469,7 +517,7 @@ Services: App Market, SEO Wizard, Mailboxes, Blog, Online Stores</p>
   	<p>40 Million+ Sites Started · No Coding Required · Personalized Domain · Premium Customer Support
 Types: Modern Websites, Professional Websites, Responsive Websites, Themed Websites, Robust Webs</p>
 
-   <div class="little-links"></div>
+   <div class="little-links">
 
 <ul>
 	<li><a class="blue-links" href="#"> Website Builder</a> -</li>
@@ -478,29 +526,225 @@ Types: Modern Websites, Professional Websites, Responsive Websites, Themed Websi
 	<li><a class="blue-links" href="#">100% Happiness Guarantee</a> </li>
 	
 </ul>
-    
+    </div>
     </div>
 
 </div> 
 
 <div class="results">
   <div class="blue-heading">
-<a href="www.wix.com/build/a-website"><h3>With zero coding experience, artist building 180 webpages in 180 days</h3> </a>  	
+<a href="https://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages"><h3>With zero coding experience, artist building 180 webpages in 180 days</h3> </a>  	
   </div>
   <div class="green-text">
-   <p> <img class="add-img" src="images/add.png">https://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages-... <img src="images/mini-arrow.png"> </p>
+   <p> https://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages-... <img src="images/mini-arrow.png"> </p>
   </div>
 
   <div class="results-body">
   	<p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages </strong> in 180 days. "Learning by doing" is taken to the extreme by novice programmer. Jon Brodkin - 7/26/2013, 11:00 AM. One of Jennifer Dewalt's creations, this <strong>webpage </strong> lets visitors <strong>create </strong>paintings in the style of Piet Mondriaan. Jennifer Dewalt · reader comments.</p>
   	
+    </div>
 
-   
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="swatikumar16.github.io/google-homepage/"><h3>Google Homepage</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> swatikumar16.github.io/google-homepage/ <img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>With zero coding experience, artist building 180 webpages ... arstechnica.com/.../with-zero-coding-experience-artist-build... Ars Technica. Jul 26, 2013 - 117 days ago, having never done any programming in her life, Jennifer Dewalt built her first webpage. The next day, she built another, and she .</p>
+  	
+    </div>
+
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="https://aryavansh.github.io/googleresults/"><h3>build this webpage - Google Search</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> https://aryavansh.github.io/googleresults/<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>117 days ago, having never done any programming in her life, Jennifer Dewalt built her first webpage. The next day, she built another, and she ... I'm learning to code by building 180 websites in 180 ... - Jennifer Dewalt. blog.jenniferdewalt.com/post/.../im-learning-to-code-by-building-180-websites-in. Jul 24, 2013 -. Build a ...</p>
+  	
     </div>
 
 </div> 
 
 
+<div class="results">
+  <div class="blue-heading">
+<a href="https://benjdelt.github.io/google-results/"><h3>build this webpage</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> https://benjdelt.github.io/google-results/<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>Google Homepage swatikumar16.github.io/google-homepage/. Jul 26, 2013 - 117 days ago, having never done any programming in her life, Jennifer Dewalt built her first webpage. The next day, she built another, and she . build this webpage - Google Search https://aryavansh.github.io/googleresults. 117 days ago, having ...</p>
+  	
+    </div>
+
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="blog.jenniferdewalt.com/post/.../im-learning-to-code-by-building-180-websites-in"><h3>Learning to Code By Building A Website a Day - Jennifer Dewalt</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> blog.jenniferdewalt.com/post/.../im-learning-to-code-by-building-180-websites-in<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>Jul 24, 2013 - A little over 4 months ago, I decided I was going to learn to code. Ignoring the fact that I had no prior coding experience and had never taken any “technical” classes in school, I decided to build 180 websites in 180 days with no days off. Today is Day 115. Background. My background is in art. The thing that ...</p>
+  	
+    </div>
+
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="https://jenniferdewalt.com/"><h3>Jennifer Dewalt | 180 Websites</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> https://jenniferdewalt.com/<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>I'm Jennifer Dewalt and I am making. 180 websites in 180 days. You can follow the project here and on the blog. Today's Website. Hello World! Day 180 Hello World! Day 179 All Draw. Day 178 How We're Feeling. Day 177 One .... Day 18 Building Blocks. Day 17 Party Time? Day 16 Caterpillar. Day 15 Dropping Boxes.</p>
+  	
+    </div>
+
+</div> 
+
+
+<div class="results">
+  <div class="blue-heading">
+<a href="https://www.squarespace.com/
+"><h3>Squarespace: Build a Website</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> https://www.squarespace.com/
+<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>Squarespace is the all-in-one solution for anyone looking to create a beautiful website. Domains, eCommerce, hosting, galleries, analytics, and 24/7 support all included.</p>
+  	
+    </div>
+
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="https://www.wix.com/
+"><h3>Wix.com: Free Website Builder | Create a Free Website</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> https://www.wix.com/
+<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>Create a free website with Wix.com. Customize with Wix' free website builder, no coding skills needed. Choose a design, begin customizing and be online today!
+</p>
+  	
+    </div>
+
+</div> 
+
+<div class="results">
+  <div class="blue-heading">
+<a href="https://www.codecademy.com/learn/make-a-website
+"><h3>Make a Website | Codecademy</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> https://www.codecademy.com/learn/make-a-website
+<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>resume card graphic. Make a Website. Continue your learning by starting with Make a Website. Start. Codecademy Intensive Program. Learn to Build Websites from Scratch by creating 16 beautifully designed projects in this accelerated 10-week program. Learn faster. Codecademy Intensive Program. Overview Syllabus ...
+</p>
+  	
+    </div>
+
+</div>
+
+<div class="results">
+  <div class="blue-heading">
+<a href="https://www.codecademy.com/courses/websites-r-fun/0/1
+"><h3>Build a Webpage from Scratch! | Codecademy</h3> </a>  	
+  </div>
+  <div class="green-text">
+   <p> https://www.codecademy.com/courses/websites-r-fun/0/1
+<img src="images/mini-arrow.png"> </p>
+  </div>
+
+  <div class="results-body">
+  	<p>Codecademy is the easiest way to learn how to code. It's interactive, fun, and you can do it with your friends.
+</p>
+  	
+    </div>
+
+</div>
+
+<div class="last-result">
+<h3>Searches related to build this webpage</h3>
+  <div id="lower-results">
+
+    <div class="lower-left">
+<p><a class="blue-links" href="/search?dcr=0&amp;q=30+websites+in+30+days&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIaygA"><b>30 websites in 30 days</b></a></p>
+<p>
+<a  class="blue-links" href="/search?dcr=0&amp;q=180+websites+in+180+days+challenge&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIbCgB"><b>180 websites in 180 days challenge</b></a></p>
+
+<p><a  class="blue-links" href="/search?dcr=0&amp;q=build+a+website+everyday&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIbSgC">build <b>a website everyday</b></a></p>
+
+<p><a class="blue-links" href="/search?dcr=0&amp;q=a+new+website+a+day&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIbigD"><b>a new website a day</b></a></p>
+	
+    </div>	
+
+    <div class="lower-right">
+
+<p><a class="blue-links" href="/search?dcr=0&amp;q=100+webpages+in+100+days&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIbygE"><b>100 webpages in 100 days</b></a> </p>
+
+<p><a class="blue-links" href="/search?dcr=0&amp;q=150+websites&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIcCgF"><b>150 websites</b></a></p>
+
+<p><a class="blue-links" href="/search?dcr=0&amp;q=180+days+webpage&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIcSgG"><b>180 days</b> webpage</a></p>
+
+<p><a class="blue-links" href="/search?dcr=0&amp;q=100+days+of+javascript&amp;sa=X&amp;ved=0ahUKEwis8oquo6LYAhXHfLwKHRHaA6sQ1QIIcigH"><b>100 days of javascript</b></a></p>
+	
+    </div>
+
+  </div>
+
+    <div id="goooogle">
+ 	  <a href="www.google.com"><img src="images/Goooogle.png"></a>
+      <div class="numbers">
+ 	  <ul>
+	<li class="goolink"> 1 </li>
+	<li><a class="blue-links goolink" href="#">2</a> </li>
+	<li><a class="blue-links goolink" href="#">3</a> </li>
+	<li><a class="blue-links goolink" href="#">4</a> </li>
+	<li><a class="blue-links goolink" href="#">5</a></li>
+	<li><a class="blue-links goolink" href="#">6</a> </li>
+	<li><a class="blue-links goolink" href="#">7</a> </li>
+	<li><a class="blue-links goolink" href="#">8</a></li>
+	<li><a class="blue-links goolink" href="#">9</a> </li>
+	<li><a class="blue-links goolink" href="#">10</a> </li>
+	<li><a id="next" class="blue-links goolink" href="#">next</a></li>
+</ul>
+      </div>
+    </div>
+	
+</div>
+
+ 
 
   </section>
 
